--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,98 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --text: rgb(4, 3, 22);
+  --background: rgb(236, 251, 254);
+  --primary: rgb(77, 46, 0);
+  --secondary: rgb(173, 172, 202);
+  --accent: rgb(133, 208, 73);
+
+  --text-50: #f2f2f2;
+  --text-100: #e6e6e6;
+  --text-200: #cccccc;
+  --text-300: #b3b3b3;
+  --text-400: #999999;
+  --text-500: #808080;
+  --text-600: #666666;
+  --text-700: #4d4d4d;
+  --text-800: #333333;
+  --text-900: #1a1a1a;
+  --text-950: #0d0d0d;
+
+  --background-50: rgb(231, 250, 254);
+  --background-100: rgb(207, 245, 252);
+  --background-200: rgb(158, 235, 250);
+  --background-300: rgb(110, 224, 247);
+  --background-400: rgb(61, 214, 245);
+  --background-500: rgb(13, 204, 242);
+  --background-600: rgb(10, 163, 194);
+  --background-700: rgb(8, 122, 145);
+  --background-800: rgb(5, 82, 97);
+  --background-900: rgb(3, 41, 48);
+  --background-950: rgb(1, 20, 24);
+
+  --primary-50: rgb(255, 245, 229);
+  --primary-100: rgb(255, 235, 204);
+  --primary-200: rgb(255, 214, 153);
+  --primary-300: rgb(255, 194, 102);
+  --primary-400: rgb(255, 173, 51);
+  --primary-500: rgb(255, 153, 0);
+  --primary-600: rgb(204, 122, 0);
+  --primary-700: rgb(153, 92, 0);
+  --primary-800: rgb(102, 61, 0);
+  --primary-900: rgb(51, 31, 0);
+  --primary-950: rgb(26, 15, 0);
+
+  --accent-50: rgb(241, 250, 235);
+  --accent-100: rgb(228, 245, 214);
+  --accent-200: rgb(201, 234, 174);
+  --accent-300: rgb(174, 224, 133);
+  --accent-400: rgb(147, 213, 93);
+  --accent-500: rgb(120, 203, 52);
+  --accent-600: rgb(96, 162, 42);
+  --accent-700: rgb(72, 122, 31);
+  --accent-800: rgb(48, 81, 21);
+  --accent-900: rgb(24, 41, 10);
+  --accent-950: rgb(12, 20, 5);
+
+
+  --font-4px: 0.25rem;
+  --font-8px: 0.5rem;
+  --font-12px: 0.75rem;
+  --font-14px: 0.875rem;
+  --font-16px: 1rem;
+  --font-18px: 1.125rem;
+  --font-20px: 1.25rem;
+  --font-22px: 1.375rem;
+  --font-24px: 1.5rem;
+  --font-26px: 1.625rem;
+  --font-28px: 1.75rem;
+  --font-32px: 2rem;
+  --font-36px: 2.25rem;
+  --font-40px: 2.5rem;
+  --font-48px: 3rem;
+  --font-64px: 4rem;
+  --font-72px: 4.5rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+/* TODO: scale font-size large(18 base) medium(16 base) small(14 base) */
 
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  min-height: 100vh;
+  height: 100vh;
+  background-color: var(--background);
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+button {
+  border: none;
+  background: none;
 }
+
+
+
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
-
-a {
-  color: inherit;
+  list-style: none;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
