add service & socials

--- a/components/about/About.module.css
+++ b/components/about/About.module.css
@@ -1,34 +1,54 @@
-.servicesSection {
+.section {
     padding-top: 4rem;
     margin-left: auto;
     margin-right: auto;
-    max-width: 72rem;
+    /* max-width: 72rem; */
 }
 
+.about {
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row-reverse;
+}
 
 .textContainer {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
     gap: 1.5rem;
+    padding: 0 1rem;
+}
+
+.imgDiv {
+    display: flex;
+    justify-content: center;
     margin-bottom: 2rem;
 }
 
 .textContainer h2 {
-    text-wrap: balance;
     font-size: 1.5rem;
     font-size: clamp(1.5rem, 1.35rem + 0.75vw, 2.25rem);
 }
 
 .textContainer p {
-    text-wrap: balance;
+    /* text-wrap: balance; */
     color: var(--text-800);
     font-size: 1rem;
     font-size: clamp(1rem, 0.9rem + 0.5vw, 1.5rem);
 }
 
+
 @media (min-width: 1024px) {
-    .textContainer {
-        text-align: start;
+    .about {
+        display: flex;
     }
+
+    .textContainer {
+        max-width: 60%;
+        margin-right: 4rem;
+        align-items: flex-start;
+    }
+
 }
