--- a/components/utils/chip/Chip.module.css
+++ b/components/utils/chip/Chip.module.css
@@ -4,5 +4,6 @@
     padding: 0.25rem 0.5rem;
     border-radius: 0.25rem;
     background-color: var(--primary-100);
+    color: var(--text-800);
 
 }
