--- a/components/services/serviceCards/Grid.module.css
+++ b/components/services/serviceCards/Grid.module.css
@@ -28,7 +28,8 @@
     padding: .75rem;
 }
 
-@media (min-width: 840px) {
+
+@media (min-width: 850px) {
     .gridContainer {
         padding-right: .75rem;
         padding-left: .75rem;
@@ -44,5 +45,14 @@
         padding-right: 1.25rem;
         padding-left: 1.25rem;
     }
+
+    /* .cardList {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .card {
+        width: 100%;
+    } */
 
 }
