--- a/app/globals.css
+++ b/app/globals.css
@@ -53,6 +53,8 @@
   --accent-900: rgb(24, 41, 10);
   --accent-950: rgb(12, 20, 5);
 
+  --footer: #292929;
+
 
   --font-4px: 0.25rem;
   --font-8px: 0.5rem;
