--- a/components/serviceArea/areaCards/Grid.module.css
+++ b/components/serviceArea/areaCards/Grid.module.css
@@ -1,7 +1,7 @@
 .gridContainer {
     padding-right: 0;
     padding-left: 0;
-    max-width: 87.5rem;
+    /* max-width: 87.5rem; */
     margin: 0 auto;
 }
 
