--- a/components/hero/Hero.module.css
+++ b/components/hero/Hero.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 6rem auto;
+    margin: 6rem auto 0 auto;
 }
 
 .hero {
