--- a/components/serviceArea/ServiceArea.module.css
+++ b/components/serviceArea/ServiceArea.module.css
@@ -2,5 +2,33 @@
     padding-top: 4rem;
     margin-left: auto;
     margin-right: auto;
-    max-width: 72rem;
+    max-width: 80rem;
+}
+
+
+.textContainer {
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.textContainer h2 {
+    text-wrap: balance;
+    font-size: 1.5rem;
+    font-size: clamp(1.5rem, 1.35rem + 0.75vw, 2.25rem);
+}
+
+.textContainer p {
+    text-wrap: balance;
+    color: var(--text-800);
+    font-size: 1rem;
+    font-size: clamp(1rem, 0.9rem + 0.5vw, 1.5rem);
+    margin-top: 1.5rem;
+}
+
+
+@media (min-width: 850px) {
+    .textContainer {
+        text-align: start;
+        padding-left: 3rem;
+    }
 }
