--- a/components/services/Services.module.css
+++ b/components/services/Services.module.css
@@ -2,15 +2,12 @@
     padding-top: 4rem;
     margin-left: auto;
     margin-right: auto;
-    max-width: 72rem;
+    max-width: 80rem;
 }
 
 
 .textContainer {
-    display: flex;
-    flex-direction: column;
     text-align: center;
-    gap: 1.5rem;
     margin-bottom: 2rem;
 }
 
@@ -25,10 +22,12 @@
     color: var(--text-800);
     font-size: 1rem;
     font-size: clamp(1rem, 0.9rem + 0.5vw, 1.5rem);
+    margin-top: 1.5rem;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 850px) {
     .textContainer {
         text-align: start;
+        padding-left: 3rem;
     }
 }
