--- a/components/services/serviceCards/Card.module.css
+++ b/components/services/serviceCards/Card.module.css
@@ -6,6 +6,7 @@
     padding: 1rem 0.75rem;
     gap: 1rem;
     border-radius: 10px;
+    box-shadow: 10px 10px 5px rgba(4, 3, 22, 0.5);
 }
 
 .title {
@@ -19,7 +20,7 @@
 }
 
 .description p {
-    color: var(--text-600);
+    color: var(--text-700);
     font-size: 1rem;
     font-size: clamp(1rem, 0.975rem + 0.125vw, 1.125rem);
 }
