--- a/components/tiktok/TiktokProfile.module.css
+++ b/components/tiktok/TiktokProfile.module.css
@@ -2,7 +2,7 @@
     padding-top: 4rem;
     margin-left: auto;
     margin-right: auto;
-    max-width: 72rem;
+    /* max-width: 80rem; */
 }
 
 .socialsBox {
