--- a/components/utils/sectionHeader/SectionHeader.module.css
+++ b/components/utils/sectionHeader/SectionHeader.module.css
@@ -10,7 +10,7 @@
     /* font-weight: 600; */
     font-size: 2.25rem;
     font-size: clamp(2.25rem, 2.1rem + 0.75vw, 3rem);
-    color: var(--text);
+    color: var(--primary-900);
 }
 
 .header span {
