--- a/app/globals.css
+++ b/app/globals.css
@@ -54,6 +54,8 @@
   --accent-950: rgb(12, 20, 5);
 
   --footer: #292929;
+  --footer-title: #87ce4b;
+  --footer-text: #DFDCDC;
 
 
   --font-4px: 0.25rem;
